<resources>
    <string name="app_name">Quick Response</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot?</string>
    <string name="f_p">Forgot</string>
    <string name="login_with">login With Google</string>
    <string name="Email_ID">Email Id</string>
    <string name="Password_hint">Password</string>
    <string name="Account">Don’t have an account?</string>
    <string name="Register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Enter Number</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="forgot_text">Don’t worry! about it Please enter your number or email</string>
    <string name="start">Get Started</string>
    <string name="welcome_msg">We responds to the calls automatically by text messages...</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello..</string>
    <string name="wlc">Welcome</string>
    <string name="otp">Enter OTP</string>
    <string name="otp_resend">Resend Otp</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="_Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="_Submit">Submit</string>
    <string name="_Save">Save</string>
    <string name="Text_message">Tap here for text message...</string>
    <string name="Custom_text">Custom text</string>
    <string name="On_Off">Auto Reply On/Off</string>
    <string name="Select_your_text">Select your text</string>
    <string name="I_am_busy_call_you_later">I am busy,call you later.</string>
    <string name="I_am_in_meeting_call_you_later">I am in meeting,call you later.</string>
    <string name="Call_you_later">Call you later.</string>
    <string name="I_call_you_after_a_few_minutes">I call you after a few minutes.</string>
    <string name="In_a_Meeting_right_now">In a Meeting,right now.</string>
    <string name="custom_msg">Custom MSG</string>
    <string name="sleeping">Sleeping</string>
    <string name="driving">Driving</string>
    <string name="meeting">Meeting</string>
    <string name="function">Function</string>
    <string name="select_any_option">Select any option</string>
    <string name="Todo">TODO</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>