<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <TextView
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="60sp"
        android:layout_marginTop="50sp"
        android:text="@string/select_any_option"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cd"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        
        <TextView
            android:layout_width="100sp"
            android:layout_height="30dp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="90dp"
            android:text="@string/function"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/fun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:src="@drawable/ic_function"
            android:contentDescription="@string/Todo"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_1"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100sp"
            android:layout_height="30dp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="90dp"
            android:text="@string/meeting"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/met"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:src="@drawable/ic_meeting"
            android:contentDescription="@string/Todo" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100sp"
            android:layout_height="30dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="90dp"
            android:text="@string/driving"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/drv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:src="@drawable/ic_steering"
            android:contentDescription="@string/Todo"/>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cd_3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="100sp"
            android:layout_height="30dp"
            android:layout_marginStart="30sp"
            android:layout_marginTop="90dp"
            android:text="@string/sleeping"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/slp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:contentDescription="@string/Todo"
            android:src="@drawable/ic_sleep" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cd_4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="120sp"
            android:layout_height="30dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="90dp"
            android:text="@string/custom_msg"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/custm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:src="@drawable/ic_custom_text"
            android:contentDescription="@string/Todo"/>


    </androidx.cardview.widget.CardView>


</RelativeLayout>