<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeetingActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cd"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/On_Off"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Switch
            android:id="@+id/switch2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="260sp"
            android:layout_marginTop="7sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_1"
        android:layout_width="380dp"
        android:layout_height="430dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/design_default_color_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">


        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/Select_your_text"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/r1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:text="@string/I_am_busy_call_you_later"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="130dp"
            android:text="I am in a function,call you later."
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="200dp"
            android:text="@string/Call_you_later"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="250dp"
            android:text="@string/I_call_you_after_a_few_minutes"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="320dp"
            android:text="In a Function,right now."
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="570dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:text="@string/_Save"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold" />


</RelativeLayout>
